--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+
+  uikit:
+    path: module/uikit
+
   cupertino_icons: ^1.0.2
   go_router: ^10.2.0
   easy_localization: ^3.0.3
